Added cateogires and split players column

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,24 +23,450 @@
     "leaderboards = pds.read_csv(os.path.join(os.getcwd(),\"data\\\\v1\\\\leaderboards-data.csv\"), parse_dates=['date', 'verifiedDate'])\n",
     "games = pds.read_csv(os.path.join(os.getcwd(),\"data\\\\v1\\\\games-data.csv\"), parse_dates=['releaseDate', 'createdDate'])\n",
     "users = pds.read_csv(os.path.join(os.getcwd(),\"data\\\\v1\\\\users-data.csv\"), parse_dates=['signupDate'])\n",
+    "categories = pds.read_csv(os.path.join(os.getcwd(),\"data\\\\v1\\\\categories-data.csv\"))\n",
     "\n",
-    "data_frame = leaderboards.merge(games, left_on=\"gameID\", right_on=\"ID\", how=\"left\")\n",
-    "data_frame = data_frame.merge(users, left_on=\"players\", right_on=\"ID\", how=\"left\")\n",
-    "\n",
+    "data_frame = leaderboards.merge(games, left_on=\"gameID\", right_on=\"ID\", how=\"left\", suffixes=('_df1', '_gme'))\n",
+    "data_frame = data_frame.merge(users, left_on=\"players\", right_on=\"ID\", how=\"left\", suffixes=('_df2', '_usr'))\n",
+    "data_frame = data_frame.merge(categories, left_on=\"categoryID\", right_on=\"ID\", how=\"left\", suffixes=('_df3', '_cat'))\n",
     "target = data_frame['emulated']\n",
-    "data_frame = data_frame.drop(columns=['runID', 'ID_x'])"
+    "data_frame = data_frame.drop(columns=['runID', 'ID_df2', 'name_df2', 'URL', 'name_usr', 'parentGameID', 'ID', 'name', 'rules'])\n",
+    " \n",
+    "# Split players rows where there are multiple players into multiple rows \n",
+    "cols = list(data_frame.columns.drop('players' ))\n",
+    "data_frame = (data_frame\n",
+    "   .set_index(cols)\n",
+    "   .stack()\n",
+    "   .str.split(',', expand=True)\n",
+    "   .stack()\n",
+    "   .unstack(-2)\n",
+    "   .reset_index(-1, drop=True)\n",
+    "   .reset_index()\n",
+    ")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gameID</th>\n",
+       "      <th>categoryID</th>\n",
+       "      <th>levelID</th>\n",
+       "      <th>date</th>\n",
+       "      <th>primaryTime</th>\n",
+       "      <th>place</th>\n",
+       "      <th>platform</th>\n",
+       "      <th>emulated</th>\n",
+       "      <th>examiner</th>\n",
+       "      <th>verifiedDate</th>\n",
+       "      <th>variablesAndValues</th>\n",
+       "      <th>releaseDate</th>\n",
+       "      <th>createdDate</th>\n",
+       "      <th>numCategories</th>\n",
+       "      <th>numLevels</th>\n",
+       "      <th>ID_usr</th>\n",
+       "      <th>signupDate</th>\n",
+       "      <th>location</th>\n",
+       "      <th>numRuns</th>\n",
+       "      <th>type</th>\n",
+       "      <th>numPlayers</th>\n",
+       "      <th>players</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>j1n8nj91</td>\n",
+       "      <td>8249gled</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-10-08</td>\n",
+       "      <td>114.067</td>\n",
+       "      <td>2</td>\n",
+       "      <td>vm9vn63k</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0jm4ppnj</td>\n",
+       "      <td>2022-10-11 19:00:28+00:00</td>\n",
+       "      <td>e8mqpdxn=4qy6xmdl</td>\n",
+       "      <td>1971-11-01</td>\n",
+       "      <td>2022-10-11 15:53:28+00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0jm4ppnj</td>\n",
+       "      <td>2018-06-05 14:39:39+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>204.0</td>\n",
+       "      <td>per-game</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0jm4ppnj</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>j1n8nj91</td>\n",
+       "      <td>8249gled</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-12-20</td>\n",
+       "      <td>108.000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>vm9vn63k</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0jm4ppnj</td>\n",
+       "      <td>2022-12-21 09:32:39+00:00</td>\n",
+       "      <td>e8mqpdxn=4qy6xmdl</td>\n",
+       "      <td>1971-11-01</td>\n",
+       "      <td>2022-10-11 15:53:28+00:00</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8d4kdg58</td>\n",
+       "      <td>2021-11-08 20:34:20+00:00</td>\n",
+       "      <td>us</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>per-game</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8d4kdg58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ldejl7j1</td>\n",
+       "      <td>w20m70zk</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-06-18</td>\n",
+       "      <td>434.000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>j204y17x</td>\n",
+       "      <td>2023-07-08 15:55:58+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1975-01-01</td>\n",
+       "      <td>2023-05-24 18:46:03+00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>xk1lp76j</td>\n",
+       "      <td>2023-05-20 22:30:30+00:00</td>\n",
+       "      <td>us</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>per-game</td>\n",
+       "      <td>1</td>\n",
+       "      <td>xk1lp76j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ldejl7j1</td>\n",
+       "      <td>w20m70zk</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-05-24</td>\n",
+       "      <td>610.000</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>True</td>\n",
+       "      <td>j204y17x</td>\n",
+       "      <td>2023-05-24 19:22:27+00:00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1975-01-01</td>\n",
+       "      <td>2023-05-24 18:46:03+00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>j204y17x</td>\n",
+       "      <td>2023-05-17 04:56:49+00:00</td>\n",
+       "      <td>us</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>per-game</td>\n",
+       "      <td>1</td>\n",
+       "      <td>j204y17x</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9d389y91</td>\n",
+       "      <td>vdopjgy2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-08-19</td>\n",
+       "      <td>25.000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>v06ddw64</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8vk4w7vj</td>\n",
+       "      <td>2022-08-23 07:09:21+00:00</td>\n",
+       "      <td>gnx2jvx8=jqzjdy8l</td>\n",
+       "      <td>1976-01-01</td>\n",
+       "      <td>2022-08-23 03:09:59+00:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8vk4w7vj</td>\n",
+       "      <td>2021-04-27 03:29:39+00:00</td>\n",
+       "      <td>jp</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>per-game</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8vk4w7vj</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1909098</th>\n",
+       "      <td>268wwry6</td>\n",
+       "      <td>wkpgwqvk</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-05-27</td>\n",
+       "      <td>521.852</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8gej2n93</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8wknpmq8</td>\n",
+       "      <td>2023-06-06 19:14:13+00:00</td>\n",
+       "      <td>ylp7zmrl=p12pz24q,kn0v3wol=810d3e5l,ql6rg77l=j...</td>\n",
+       "      <td>2023-11-07</td>\n",
+       "      <td>2021-06-26 20:35:23+00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>per-game</td>\n",
+       "      <td>2</td>\n",
+       "      <td>pj0o619j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1909099</th>\n",
+       "      <td>268wwry6</td>\n",
+       "      <td>wkpgwqvk</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-01-06</td>\n",
+       "      <td>1630.129</td>\n",
+       "      <td>20</td>\n",
+       "      <td>8gej2n93</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8wknpmq8</td>\n",
+       "      <td>2023-01-08 21:37:36+00:00</td>\n",
+       "      <td>ylp7zmrl=z19krz8q,kn0v3wol=013yvmdl,ql6rg77l=2...</td>\n",
+       "      <td>2023-11-07</td>\n",
+       "      <td>2021-06-26 20:35:23+00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>per-game</td>\n",
+       "      <td>2</td>\n",
+       "      <td>xzlv7de8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1909100</th>\n",
+       "      <td>268wwry6</td>\n",
+       "      <td>wkpgwqvk</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2023-01-06</td>\n",
+       "      <td>1630.129</td>\n",
+       "      <td>20</td>\n",
+       "      <td>8gej2n93</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8wknpmq8</td>\n",
+       "      <td>2023-01-08 21:37:36+00:00</td>\n",
+       "      <td>ylp7zmrl=z19krz8q,kn0v3wol=013yvmdl,ql6rg77l=2...</td>\n",
+       "      <td>2023-11-07</td>\n",
+       "      <td>2021-06-26 20:35:23+00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>per-game</td>\n",
+       "      <td>2</td>\n",
+       "      <td>8lp7wo2j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1909101</th>\n",
+       "      <td>268wwry6</td>\n",
+       "      <td>wkpgwqvk</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-02-16</td>\n",
+       "      <td>940.356</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8gej2n93</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8wknpmq8</td>\n",
+       "      <td>2022-02-16 15:01:28+00:00</td>\n",
+       "      <td>ylp7zmrl=p12pz24q,kn0v3wol=5le722m1,ql6rg77l=j...</td>\n",
+       "      <td>2023-11-07</td>\n",
+       "      <td>2021-06-26 20:35:23+00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>per-game</td>\n",
+       "      <td>2</td>\n",
+       "      <td>xkm6oe7j</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1909102</th>\n",
+       "      <td>268wwry6</td>\n",
+       "      <td>wkpgwqvk</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2022-02-16</td>\n",
+       "      <td>940.356</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8gej2n93</td>\n",
+       "      <td>False</td>\n",
+       "      <td>8wknpmq8</td>\n",
+       "      <td>2022-02-16 15:01:28+00:00</td>\n",
+       "      <td>ylp7zmrl=p12pz24q,kn0v3wol=5le722m1,ql6rg77l=j...</td>\n",
+       "      <td>2023-11-07</td>\n",
+       "      <td>2021-06-26 20:35:23+00:00</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>per-game</td>\n",
+       "      <td>2</td>\n",
+       "      <td>pj0o619j</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1909103 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           gameID categoryID levelID       date  primaryTime  place  platform  \\\n",
+       "0        j1n8nj91   8249gled     NaN 2022-10-08      114.067      2  vm9vn63k   \n",
+       "1        j1n8nj91   8249gled     NaN 2022-12-20      108.000      1  vm9vn63k   \n",
+       "2        ldejl7j1   w20m70zk     NaN 2023-06-18      434.000      1       NaN   \n",
+       "3        ldejl7j1   w20m70zk     NaN 2023-05-24      610.000      2       NaN   \n",
+       "4        9d389y91   vdopjgy2     NaN 2022-08-19       25.000      1  v06ddw64   \n",
+       "...           ...        ...     ...        ...          ...    ...       ...   \n",
+       "1909098  268wwry6   wkpgwqvk     NaN 2023-05-27      521.852      1  8gej2n93   \n",
+       "1909099  268wwry6   wkpgwqvk     NaN 2023-01-06     1630.129     20  8gej2n93   \n",
+       "1909100  268wwry6   wkpgwqvk     NaN 2023-01-06     1630.129     20  8gej2n93   \n",
+       "1909101  268wwry6   wkpgwqvk     NaN 2022-02-16      940.356      0  8gej2n93   \n",
+       "1909102  268wwry6   wkpgwqvk     NaN 2022-02-16      940.356      0  8gej2n93   \n",
+       "\n",
+       "         emulated  examiner              verifiedDate  \\\n",
+       "0            True  0jm4ppnj 2022-10-11 19:00:28+00:00   \n",
+       "1            True  0jm4ppnj 2022-12-21 09:32:39+00:00   \n",
+       "2            True  j204y17x 2023-07-08 15:55:58+00:00   \n",
+       "3            True  j204y17x 2023-05-24 19:22:27+00:00   \n",
+       "4           False  8vk4w7vj 2022-08-23 07:09:21+00:00   \n",
+       "...           ...       ...                       ...   \n",
+       "1909098     False  8wknpmq8 2023-06-06 19:14:13+00:00   \n",
+       "1909099     False  8wknpmq8 2023-01-08 21:37:36+00:00   \n",
+       "1909100     False  8wknpmq8 2023-01-08 21:37:36+00:00   \n",
+       "1909101     False  8wknpmq8 2022-02-16 15:01:28+00:00   \n",
+       "1909102     False  8wknpmq8 2022-02-16 15:01:28+00:00   \n",
+       "\n",
+       "                                        variablesAndValues releaseDate  \\\n",
+       "0                                        e8mqpdxn=4qy6xmdl  1971-11-01   \n",
+       "1                                        e8mqpdxn=4qy6xmdl  1971-11-01   \n",
+       "2                                                      NaN  1975-01-01   \n",
+       "3                                                      NaN  1975-01-01   \n",
+       "4                                        gnx2jvx8=jqzjdy8l  1976-01-01   \n",
+       "...                                                    ...         ...   \n",
+       "1909098  ylp7zmrl=p12pz24q,kn0v3wol=810d3e5l,ql6rg77l=j...  2023-11-07   \n",
+       "1909099  ylp7zmrl=z19krz8q,kn0v3wol=013yvmdl,ql6rg77l=2...  2023-11-07   \n",
+       "1909100  ylp7zmrl=z19krz8q,kn0v3wol=013yvmdl,ql6rg77l=2...  2023-11-07   \n",
+       "1909101  ylp7zmrl=p12pz24q,kn0v3wol=5le722m1,ql6rg77l=j...  2023-11-07   \n",
+       "1909102  ylp7zmrl=p12pz24q,kn0v3wol=5le722m1,ql6rg77l=j...  2023-11-07   \n",
+       "\n",
+       "                      createdDate  numCategories  numLevels    ID_usr  \\\n",
+       "0       2022-10-11 15:53:28+00:00              3          0  0jm4ppnj   \n",
+       "1       2022-10-11 15:53:28+00:00              3          0  8d4kdg58   \n",
+       "2       2023-05-24 18:46:03+00:00              1          0  xk1lp76j   \n",
+       "3       2023-05-24 18:46:03+00:00              1          0  j204y17x   \n",
+       "4       2022-08-23 03:09:59+00:00              1          0  8vk4w7vj   \n",
+       "...                           ...            ...        ...       ...   \n",
+       "1909098 2021-06-26 20:35:23+00:00              2          0       NaN   \n",
+       "1909099 2021-06-26 20:35:23+00:00              2          0       NaN   \n",
+       "1909100 2021-06-26 20:35:23+00:00              2          0       NaN   \n",
+       "1909101 2021-06-26 20:35:23+00:00              2          0       NaN   \n",
+       "1909102 2021-06-26 20:35:23+00:00              2          0       NaN   \n",
+       "\n",
+       "                       signupDate location  numRuns      type  numPlayers  \\\n",
+       "0       2018-06-05 14:39:39+00:00      NaN    204.0  per-game           1   \n",
+       "1       2021-11-08 20:34:20+00:00       us     36.0  per-game           1   \n",
+       "2       2023-05-20 22:30:30+00:00       us     22.0  per-game           1   \n",
+       "3       2023-05-17 04:56:49+00:00       us      1.0  per-game           1   \n",
+       "4       2021-04-27 03:29:39+00:00       jp    109.0  per-game           1   \n",
+       "...                           ...      ...      ...       ...         ...   \n",
+       "1909098                       NaT      NaN      NaN  per-game           2   \n",
+       "1909099                       NaT      NaN      NaN  per-game           2   \n",
+       "1909100                       NaT      NaN      NaN  per-game           2   \n",
+       "1909101                       NaT      NaN      NaN  per-game           2   \n",
+       "1909102                       NaT      NaN      NaN  per-game           2   \n",
+       "\n",
+       "          players  \n",
+       "0        0jm4ppnj  \n",
+       "1        8d4kdg58  \n",
+       "2        xk1lp76j  \n",
+       "3        j204y17x  \n",
+       "4        8vk4w7vj  \n",
+       "...           ...  \n",
+       "1909098  pj0o619j  \n",
+       "1909099  xzlv7de8  \n",
+       "1909100  8lp7wo2j  \n",
+       "1909101  xkm6oe7j  \n",
+       "1909102  pj0o619j  \n",
+       "\n",
+       "[1909103 rows x 22 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Print Table\n",
     "\n",
     "pds.set_option('display.max_columns', None)\n",
-    "data_frame = data_frame.rename(columns={'name_x': 'gameName', 'URL': 'gameURL', 'ID_y': 'userID', 'name_y': 'username'})\n",
+    "#data_frame = data_frame.rename(columns={})\n",
     "display(data_frame)"
    ]
   },
