--- a/main.ipynb
+++ b/main.ipynb
@@ -12,9 +12,14 @@
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import display\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import accuracy_score,classification_report,confusion_matrix,ConfusionMatrixDisplay\n",
-    "from sklearn.naive_bayes import GaussianNB"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.svm import SVC"
    ]
   },
   {
@@ -124,14 +129,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Min-Max Normalization\n",
+    "# Normalization\n",
+    "\n",
+    "minmax = data_frame.copy(deep=True)\n",
     "\n",
     "for col in data_frame.columns[data_frame.dtypes != 'bool']:\n",
     "    minimum = data_frame[col].min()\n",
-    "    data_frame[col] = (data_frame[col] - minimum) / (data_frame[col].max() - minimum)\n",
+    "    minmax[col] = (data_frame[col] - minimum) / (data_frame[col].max() - minimum)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "# Fit and transform the data\n",
+    "data_frame = pds.DataFrame(scaler.fit_transform(data_frame), columns=data_frame.columns)\n",
+    "\n",
     "\n",
     "display(data_frame)\n",
-    "print(data_frame.isnull().sum())"
+    "print(data_frame.isnull().sum())\n",
+    "display(minmax)\n",
+    "print(minmax.isnull().sum())"
    ]
   },
   {
@@ -141,8 +155,10 @@
    "outputs": [],
    "source": [
     "# Test-Train Split\n",
+    "rdm_seed = 404\n",
     "\n",
-    "data_train, data_test, target_train, target_test  = train_test_split(data_frame, target,test_size = 0.33, random_state = 404, shuffle = True)"
+    "minmax_train, minmax_test, mm_target_train, mm_target_test  = train_test_split(minmax, target,test_size = 0.33, random_state = rdm_seed, shuffle = True)\n",
+    "std_train, std_test, std_target_train, std_target_test  = train_test_split(data_frame, target,test_size = 0.33, random_state = rdm_seed, shuffle = True)"
    ]
   },
   {
@@ -154,8 +170,8 @@
     "# KNN\n",
     "k = 5\n",
     "knn = KNeighborsClassifier(n_neighbors = k)\n",
-    "knn.fit(data_train, target_train)\n",
-    "target_pred = knn.predict(data_test)"
+    "knn.fit(minmax_train, mm_target_train)\n",
+    "target_pred = knn.predict(minmax_test)"
    ]
   },
   {
@@ -166,11 +182,11 @@
    "source": [
     "# KNN Post-Run Statistics\n",
     "\n",
-    "accuracy = accuracy_score(target_test,target_pred) \n",
-    "conMatrix = confusion_matrix(target_test, target_pred)\n",
+    "accuracy = accuracy_score(mm_target_test,target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
     "\n",
     "print(f'Accuracy of model with k = {k}: {accuracy}%\\n')\n",
-    "print(f'Classification Report:\\n {classification_report(target_test, target_pred)}')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
     "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
     "plt.show()"
    ]
@@ -184,8 +200,8 @@
     "# Gaussian Naive Bayes\n",
     "\n",
     "GNB = GaussianNB()\n",
-    "GNB.fit(data_train, target_train)\n",
-    "target_pred = GNB.predict(data_test)"
+    "GNB.fit(minmax_train, mm_target_train)\n",
+    "target_pred = GNB.predict(minmax_test)"
    ]
   },
   {
@@ -196,11 +212,101 @@
    "source": [
     "# Gaussian NB Post-Run Statistics\n",
     "\n",
-    "accuracy = accuracy_score(target_test,target_pred) \n",
-    "conMatrix = confusion_matrix(target_test, target_pred)\n",
+    "accuracy = accuracy_score(mm_target_test,target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
     "\n",
     "print(f'Accuracy of model: {accuracy}%\\n')\n",
-    "print(f'Classification Report:\\n {classification_report(target_test, target_pred)}')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Forest\n",
+    "\n",
+    "randomForest = RandomForestClassifier(n_estimators=200, random_state=rdm_seed)\n",
+    "randomForest.fit(minmax_train,mm_target_train)\n",
+    "target_pred = randomForest.predict(minmax_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Forest Post-Run Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(mm_target_test,target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Logistic Regression\n",
+    "\n",
+    "logReg = LogisticRegression(random_state=rdm_seed)\n",
+    "logReg.fit(std_train, std_target_train)\n",
+    "target_pred = randomForest.predict(std_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Logistic Regression Post-Run Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(std_target_test,target_pred) \n",
+    "conMatrix = confusion_matrix(std_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(std_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decision Tree Post-Run Statistics\n",
+    "\n",
+    "dTree = DecisionTreeClassifier()\n",
+    "dTree.fit(minmax_train,mm_target_train)\n",
+    "target_pred = dTree.predict(minmax_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decision Tree Post-Run Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(mm_target_test,target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
     "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
     "plt.show()"
    ]
@@ -222,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
