Added all 8 models, SVC tested with 10K iters but not with 100k

--- a/main.ipynb
+++ b/main.ipynb
@@ -16,10 +16,12 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier,AdaBoostClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.svm import SVC"
+    "from sklearn.svm import SVC\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.cluster import KMeans"
    ]
   },
   {
@@ -287,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Decision Tree Post-Run Statistics\n",
+    "# Decision Tree\n",
     "\n",
     "dTree = DecisionTreeClassifier()\n",
     "dTree.fit(minmax_train,mm_target_train)\n",
@@ -302,7 +304,95 @@
    "source": [
     "# Decision Tree Post-Run Statistics\n",
     "\n",
-    "accuracy = accuracy_score(mm_target_test,target_pred) \n",
+    "accuracy = accuracy_score(mm_target_test, target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AdaBoost\n",
+    "\n",
+    "adaBoost = AdaBoostClassifier()\n",
+    "adaBoost.fit(minmax_train,mm_target_train)\n",
+    "target_pred = adaBoost.predict(minmax_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AdaBoost Post-Run Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(mm_target_test, target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multi-Layered Perceptron\n",
+    "\n",
+    "MLP = MLPClassifier(random_state=rdm_seed, max_iter=1000)\n",
+    "MLP.fit(minmax_train, mm_target_train)\n",
+    "target_pred = MLP.predict(minmax_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decision Tree Post-Run Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(mm_target_test, target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svm = SVC(random_state=rdm_seed, cache_size=4000, max_iter=100000)\n",
+    "svm.fit(minmax_train,mm_target_train)\n",
+    "target_pred = svm.predict(minmax_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decision Tree Post-Run Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(mm_target_test, target_pred) \n",
     "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
     "\n",
     "print(f'Accuracy of model: {accuracy}%\\n')\n",
