--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,18 @@
     "import pandas as pds\n",
     "import numpy as np\n",
     "import os\n",
-    "from IPython.display import display"
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import display\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score,classification_report,confusion_matrix,ConfusionMatrixDisplay\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.ensemble import RandomForestClassifier,AdaBoostClassifier,BaggingClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.cluster import KMeans"
    ]
   },
   {
@@ -30,8 +41,7 @@
     "data_frame = data_frame.merge(users, left_on=\"players\", right_on=\"ID\", how=\"left\", suffixes=('_df2', '_usr'))\n",
     "data_frame = data_frame.merge(categories, left_on=\"categoryID\", right_on=\"ID\", how=\"left\", suffixes=('_df3', '_cat'))\n",
     "\n",
-    "target = data_frame['emulated']\n",
-    "data_frame = data_frame.drop(columns=['runID', 'ID_df2', 'name_df2', 'URL', 'name_usr', 'parentGameID', 'ID_usr', 'name', 'rules', 'emulated', 'variablesAndValues', 'ID'])\n",
+    "data_frame = data_frame.drop(columns=['runID', 'ID_df2', 'name_df2', 'URL', 'name_usr', 'parentGameID', 'ID_usr', 'name', 'rules', 'variablesAndValues', 'ID'])\n",
     " \n",
     "# Split players rows where there are multiple players into multiple rows \n",
     "cols = list(data_frame.columns.drop('players' ))\n",
@@ -45,7 +55,8 @@
     "   .reset_index()\n",
     ")\n",
     "\n",
-    "data_frame = data_frame.drop(columns=['levelID'])\n",
+    "target = data_frame['emulated']\n",
+    "data_frame = data_frame.drop(columns=['levelID', 'emulated'])\n",
     "\n",
     "for col in data_frame.columns[data_frame.dtypes == 'object']:\n",
     "    data_frame[col] = data_frame[col].astype('category')"
@@ -119,14 +130,292 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Min-Max Normalization\n",
+    "# Normalization\n",
+    "\n",
+    "minmax = data_frame.copy(deep=True)\n",
     "\n",
     "for col in data_frame.columns[data_frame.dtypes != 'bool']:\n",
     "    minimum = data_frame[col].min()\n",
-    "    data_frame[col] = (data_frame[col] - minimum) / (data_frame[col].max() - minimum)\n",
+    "    minmax[col] = (data_frame[col] - minimum) / (data_frame[col].max() - minimum)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "# Fit and transform the data\n",
+    "data_frame = pds.DataFrame(scaler.fit_transform(data_frame), columns=data_frame.columns)\n",
+    "\n",
     "\n",
     "display(data_frame)\n",
-    "print(data_frame.isnull().sum())"
+    "print(data_frame.isnull().sum())\n",
+    "display(minmax)\n",
+    "print(minmax.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test-Train Split\n",
+    "rdm_seed = 404\n",
+    "\n",
+    "minmax_train, minmax_test, mm_target_train, mm_target_test  = train_test_split(minmax, target,test_size = 0.33, random_state = rdm_seed, shuffle = True)\n",
+    "std_train, std_test, std_target_train, std_target_test  = train_test_split(data_frame, target,test_size = 0.33, random_state = rdm_seed, shuffle = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KNN\n",
+    "k = 5\n",
+    "knn = KNeighborsClassifier(n_neighbors = k)\n",
+    "knn.fit(minmax_train, mm_target_train)\n",
+    "target_pred = knn.predict(minmax_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# KNN Post-Run Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(mm_target_test,target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model with k = {k}: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gaussian Naive Bayes\n",
+    "\n",
+    "GNB = GaussianNB()\n",
+    "GNB.fit(minmax_train, mm_target_train)\n",
+    "target_pred = GNB.predict(minmax_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gaussian NB Post-Run Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(mm_target_test,target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Forest\n",
+    "\n",
+    "randomForest = RandomForestClassifier(n_estimators=200, random_state=rdm_seed)\n",
+    "randomForest.fit(minmax_train,mm_target_train)\n",
+    "target_pred = randomForest.predict(minmax_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Random Forest Post-Run Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(mm_target_test,target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Logistic Regression\n",
+    "\n",
+    "logReg = LogisticRegression(random_state=rdm_seed)\n",
+    "logReg.fit(std_train, std_target_train)\n",
+    "target_pred = randomForest.predict(std_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Logistic Regression Post-Run Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(std_target_test,target_pred) \n",
+    "conMatrix = confusion_matrix(std_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(std_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decision Tree\n",
+    "\n",
+    "dTree = DecisionTreeClassifier()\n",
+    "dTree.fit(minmax_train,mm_target_train)\n",
+    "target_pred = dTree.predict(minmax_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decision Tree Post-Run Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(mm_target_test, target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AdaBoost\n",
+    "\n",
+    "adaBoost = AdaBoostClassifier()\n",
+    "adaBoost.fit(minmax_train,mm_target_train)\n",
+    "target_pred = adaBoost.predict(minmax_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AdaBoost Post-Run Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(mm_target_test, target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multi-Layered Perceptron\n",
+    "\n",
+    "MLP = MLPClassifier(random_state=rdm_seed, max_iter=1000)\n",
+    "MLP.fit(minmax_train, mm_target_train)\n",
+    "target_pred = MLP.predict(minmax_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decision Tree Post-Run Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(mm_target_test, target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Decision Tree Post-Run Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(mm_target_test, target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Bagging Classifier\n",
+    "\n",
+    "bgc=BaggingClassifier()\n",
+    "bgc.fit(minmax_train, mm_target_train)  \n",
+    "target_pred = bgc.predict(minmax_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Bagging Classifier Statistics\n",
+    "\n",
+    "accuracy = accuracy_score(mm_target_test,target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
+    "\n",
+    "print(f'Accuracy of model: {accuracy}%\\n')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
+    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()"
    ]
   }
  ],
@@ -146,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
