--- a/main.ipynb
+++ b/main.ipynb
@@ -13,15 +13,12 @@
     "from IPython.display import display\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score,classification_report,confusion_matrix,ConfusionMatrixDisplay\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.ensemble import RandomForestClassifier,AdaBoostClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.cluster import KMeans"
+    "from sklearn.neural_network import MLPClassifier"
    ]
   },
   {
@@ -139,11 +136,6 @@
     "    minimum = data_frame[col].min()\n",
     "    minmax[col] = (data_frame[col] - minimum) / (data_frame[col].max() - minimum)\n",
     "\n",
-    "scaler = StandardScaler()\n",
-    "# Fit and transform the data\n",
-    "data_frame = pds.DataFrame(scaler.fit_transform(data_frame), columns=data_frame.columns)\n",
-    "\n",
-    "\n",
     "display(data_frame)\n",
     "print(data_frame.isnull().sum())\n",
     "display(minmax)\n",
@@ -159,8 +151,7 @@
     "# Test-Train Split\n",
     "rdm_seed = 404\n",
     "\n",
-    "minmax_train, minmax_test, mm_target_train, mm_target_test  = train_test_split(minmax, target,test_size = 0.33, random_state = rdm_seed, shuffle = True)\n",
-    "std_train, std_test, std_target_train, std_target_test  = train_test_split(data_frame, target,test_size = 0.33, random_state = rdm_seed, shuffle = True)"
+    "minmax_train, minmax_test, mm_target_train, mm_target_test  = train_test_split(minmax, target,test_size = 0.33, random_state = rdm_seed, shuffle = True)"
    ]
   },
   {
@@ -231,7 +222,7 @@
    "source": [
     "# Random Forest\n",
     "\n",
-    "randomForest = RandomForestClassifier(n_estimators=200, random_state=rdm_seed)\n",
+    "randomForest = RandomForestClassifier(n_estimators=200, random_state=rdm_seed, class_weight='balanced')\n",
     "randomForest.fit(minmax_train,mm_target_train)\n",
     "target_pred = randomForest.predict(minmax_test)"
    ]
@@ -261,9 +252,9 @@
    "source": [
     "# Logistic Regression\n",
     "\n",
-    "logReg = LogisticRegression(random_state=rdm_seed)\n",
-    "logReg.fit(std_train, std_target_train)\n",
-    "target_pred = randomForest.predict(std_test)"
+    "logReg = LogisticRegression(random_state=rdm_seed, class_weight='balanced')\n",
+    "logReg.fit(minmax_train, mm_target_train)\n",
+    "target_pred = randomForest.predict(minmax_test)"
    ]
   },
   {
@@ -274,11 +265,11 @@
    "source": [
     "# Logistic Regression Post-Run Statistics\n",
     "\n",
-    "accuracy = accuracy_score(std_target_test,target_pred) \n",
-    "conMatrix = confusion_matrix(std_target_test, target_pred)\n",
+    "accuracy = accuracy_score(mm_target_test,target_pred) \n",
+    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
     "\n",
     "print(f'Accuracy of model: {accuracy}%\\n')\n",
-    "print(f'Classification Report:\\n {classification_report(std_target_test, target_pred)}')\n",
+    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
     "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
     "plt.show()"
    ]
@@ -291,7 +282,7 @@
    "source": [
     "# Decision Tree\n",
     "\n",
-    "dTree = DecisionTreeClassifier()\n",
+    "dTree = DecisionTreeClassifier(random_state=rdm_seed, class_weight='balanced')\n",
     "dTree.fit(minmax_train,mm_target_train)\n",
     "target_pred = dTree.predict(minmax_test)"
    ]
@@ -321,7 +312,7 @@
    "source": [
     "# AdaBoost\n",
     "\n",
-    "adaBoost = AdaBoostClassifier()\n",
+    "adaBoost = AdaBoostClassifier(algorithm='SAMME', random_state=rdm_seed)\n",
     "adaBoost.fit(minmax_train,mm_target_train)\n",
     "target_pred = adaBoost.predict(minmax_test)"
    ]
@@ -362,35 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Decision Tree Post-Run Statistics\n",
-    "\n",
-    "accuracy = accuracy_score(mm_target_test, target_pred) \n",
-    "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
-    "\n",
-    "print(f'Accuracy of model: {accuracy}%\\n')\n",
-    "print(f'Classification Report:\\n {classification_report(mm_target_test, target_pred)}')\n",
-    "ConfusionMatrixDisplay(conMatrix, display_labels=[\"Not Emulated\", \"Emulated\"],).plot()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "svm = SVC(random_state=rdm_seed, cache_size=4000, max_iter=100000)\n",
-    "svm.fit(minmax_train,mm_target_train)\n",
-    "target_pred = svm.predict(minmax_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Decision Tree Post-Run Statistics\n",
+    "# Multi-Layered Perceptron Post-Run Statistics\n",
     "\n",
     "accuracy = accuracy_score(mm_target_test, target_pred) \n",
     "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
