--- a/main.ipynb
+++ b/main.ipynb
@@ -11,10 +11,11 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import display\n",
+    "from sklearn.utils import resample\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score,classification_report,confusion_matrix,ConfusionMatrixDisplay\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.ensemble import RandomForestClassifier,AdaBoostClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
@@ -39,7 +40,7 @@
     "data_frame = data_frame.merge(users, left_on=\"players\", right_on=\"ID\", how=\"left\", suffixes=('_df2', '_usr'))\n",
     "data_frame = data_frame.merge(categories, left_on=\"categoryID\", right_on=\"ID\", how=\"left\", suffixes=('_df3', '_cat'))\n",
     "\n",
-    "data_frame = data_frame.drop(columns=['runID', 'ID_df2', 'name_df2', 'URL', 'name_usr', 'parentGameID', 'ID_usr', 'name', 'rules', 'variablesAndValues', 'ID'])\n",
+    "data_frame = data_frame.drop(columns=['ID_df2', 'name_df2', 'URL', 'name_usr', 'parentGameID', 'ID_usr', 'name', 'rules', 'variablesAndValues', 'ID'])\n",
     " \n",
     "# Split players rows where there are multiple players into multiple rows \n",
     "cols = list(data_frame.columns.drop('players' ))\n",
@@ -53,8 +54,7 @@
     "   .reset_index()\n",
     ")\n",
     "\n",
-    "target = data_frame['emulated']\n",
-    "data_frame = data_frame.drop(columns=['levelID', 'emulated'])\n",
+    "data_frame = data_frame.drop(columns=['levelID'])\n",
     "\n",
     "for col in data_frame.columns[data_frame.dtypes == 'object']:\n",
     "    data_frame[col] = data_frame[col].astype('category')"
@@ -148,10 +148,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Test-Train Split\n",
+    "# Test-Train Split + Downsampling\n",
     "rdm_seed = 404\n",
     "\n",
-    "minmax_train, minmax_test, mm_target_train, mm_target_test  = train_test_split(minmax, target,test_size = 0.33, random_state = rdm_seed, shuffle = True)"
+    "minmax_majority = minmax[minmax['emulated'] == False]\n",
+    "minmax_minority = minmax[minmax['emulated'] == True]\n",
+    "\n",
+    "mm_downsampled = resample(minmax_majority, \n",
+    "                                 replace=False,    \n",
+    "                                 n_samples=len(minmax_minority),  \n",
+    "                                 random_state=rdm_seed) \n",
+    "\n",
+    "minmax = pds.concat([mm_downsampled, minmax_minority])\n",
+    " \n",
+    "# Display new class counts\n",
+    "print(np.unique(minmax['emulated'], return_counts=True))\n",
+    "\n",
+    "target = minmax['emulated']\n",
+    "minmax = minmax.drop(columns=['runID', 'emulated'])\n",
+    "\n",
+    "minmax_train, minmax_test, mm_target_train, mm_target_test  = train_test_split(minmax, target,test_size = 0.33, random_state = rdm_seed, shuffle = True)\n",
+    "display(minmax_train)\n",
+    "display(minmax_test)\n",
+    "display(mm_target_train)\n",
+    "display(mm_target_test)"
    ]
   },
   {
@@ -175,7 +195,7 @@
    "source": [
     "# KNN Post-Run Statistics\n",
     "\n",
-    "accuracy = accuracy_score(mm_target_test,target_pred) \n",
+    "accuracy = accuracy_score(mm_target_test,target_pred) * 100\n",
     "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
     "\n",
     "print(f'Accuracy of model with k = {k}: {accuracy}%\\n')\n",
@@ -190,11 +210,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gaussian Naive Bayes\n",
+    "# Multinomial Naive Bayes\n",
     "\n",
-    "GNB = GaussianNB()\n",
-    "GNB.fit(minmax_train, mm_target_train)\n",
-    "target_pred = GNB.predict(minmax_test)"
+    "MNNB = MultinomialNB()\n",
+    "MNNB.fit(minmax_train, mm_target_train)\n",
+    "target_pred = MNNB.predict(minmax_test)"
    ]
   },
   {
@@ -203,9 +223,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gaussian NB Post-Run Statistics\n",
+    "# Multinomial NB Post-Run Statistics\n",
     "\n",
-    "accuracy = accuracy_score(mm_target_test,target_pred) \n",
+    "accuracy = accuracy_score(mm_target_test,target_pred) * 100\n",
     "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
     "\n",
     "print(f'Accuracy of model: {accuracy}%\\n')\n",
@@ -235,7 +255,7 @@
    "source": [
     "# Random Forest Post-Run Statistics\n",
     "\n",
-    "accuracy = accuracy_score(mm_target_test,target_pred) \n",
+    "accuracy = accuracy_score(mm_target_test,target_pred) * 100\n",
     "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
     "\n",
     "print(f'Accuracy of model: {accuracy}%\\n')\n",
@@ -254,7 +274,7 @@
     "\n",
     "logReg = LogisticRegression(random_state=rdm_seed, class_weight='balanced')\n",
     "logReg.fit(minmax_train, mm_target_train)\n",
-    "target_pred = randomForest.predict(minmax_test)"
+    "target_pred = logReg.predict(minmax_test)"
    ]
   },
   {
@@ -265,7 +285,7 @@
    "source": [
     "# Logistic Regression Post-Run Statistics\n",
     "\n",
-    "accuracy = accuracy_score(mm_target_test,target_pred) \n",
+    "accuracy = accuracy_score(mm_target_test,target_pred) * 100\n",
     "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
     "\n",
     "print(f'Accuracy of model: {accuracy}%\\n')\n",
@@ -295,7 +315,7 @@
    "source": [
     "# Decision Tree Post-Run Statistics\n",
     "\n",
-    "accuracy = accuracy_score(mm_target_test, target_pred) \n",
+    "accuracy = accuracy_score(mm_target_test, target_pred) * 100\n",
     "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
     "\n",
     "print(f'Accuracy of model: {accuracy}%\\n')\n",
@@ -325,7 +345,7 @@
    "source": [
     "# AdaBoost Post-Run Statistics\n",
     "\n",
-    "accuracy = accuracy_score(mm_target_test, target_pred) \n",
+    "accuracy = accuracy_score(mm_target_test, target_pred) * 100\n",
     "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
     "\n",
     "print(f'Accuracy of model: {accuracy}%\\n')\n",
@@ -355,7 +375,7 @@
    "source": [
     "# Multi-Layered Perceptron Post-Run Statistics\n",
     "\n",
-    "accuracy = accuracy_score(mm_target_test, target_pred) \n",
+    "accuracy = accuracy_score(mm_target_test, target_pred) * 100\n",
     "conMatrix = confusion_matrix(mm_target_test, target_pred)\n",
     "\n",
     "print(f'Accuracy of model: {accuracy}%\\n')\n",
